--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@dfinity/agent": "^0.13.2",
     "express": "^4.18.1",
     "http": "^0.0.1-security",
     "request": "^2.88.2",
-    "socket.io": "^4.5.1"
+    "socket.io": "^4.5.1",
+    "web3-eth-contract": "^1.7.5"
   }
 }
